--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,25 @@ document.addEventListener('DOMContentLoaded', () => {
       loadTransactions();
     });
     // Load transactions when tab is activated
+    const transactionsTabButton = document.querySelector('.tab-button[data-tab="transactions"]'); // Adjust selector if needed
+    if (transactionsTabButton) {
+      transactionsTabButton.addEventListener('click', () => {
+        console.log('Transactions tab activated');
+        loadTransactions();
+      });
+    }
+  }
+});
+</script>
+// Initialize Transactions tab filter
+document.addEventListener('DOMContentLoaded', () => {
+  const transactionsFilter = document.getElementById('transactions-filter');
+  if (transactionsFilter) {
+    transactionsFilter.addEventListener('change', () => {
+      console.log('Transactions filter changed', { filter: transactionsFilter.value });
+      loadTransactions();
+    });
+    // Load transactions when tab is activated
     const transactionsTabButton = document.querySelector('[data-tab="transactions"]'); // Adjust selector to match your tab button
     if (transactionsTabButton) {
       transactionsTabButton.addEventListener('click', () => {
