Update index.html speed opt last worked

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-Content-Type-Options" content="nosniff">
   <title>InRUSD: Family Budget</title>
+  <link rel="preload" href="/assets/tailwind.css" as="style">
   <link href="/assets/tailwind.css" rel="stylesheet">
   <script defer>
     console.log('index.html: Starting script load');
@@ -27,7 +28,7 @@
       }
     });
   </script>
-  <script type="module" src="/js" defer onload="console.log('js.js script tag loaded')" onerror="console.error('Failed to load js.js')"></script>
+  <script type="module" src="/js.js" defer onload="console.log('js.js script tag loaded')" onerror="console.error('Failed to load js.js')"></script>
 </head>
 <body class="bg-gray-100 font-sans">
 <!-- Auth Modals -->
