--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       }
     });
   </script>
-  <script type="module" src="/js.js" defer onload="console.log('js.js script tag loaded')" onerror="console.error('Failed to load js.js')"></script>
+  <script type="module" src="/js" defer onload="console.log('js.js script tag loaded')" onerror="console.error('Failed to load js.js')"></script>
 </head>
 <body class="bg-gray-100 font-sans">
 <!-- Auth Modals -->
