--- a/src/index.html
+++ b/src/index.html
@@ -199,6 +199,7 @@
               <option value="add-new">Add New</option>
             </select>
             <input id="description" type="text" placeholder="Description" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+            <input id="transaction-date" type="date" placeholder="Transaction Date" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600" required>
           </div>
           <button id="add-transaction" type="button" class="mt-4 bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700 transition w-full sm:w-auto">Add Transaction</button>
         </div>
