--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
   <link href="/assets/tailwind.css" rel="stylesheet">
   <script defer>
     console.log('index.html: Starting script load');
-    window.add personally identifiable information is not allowed in code snippets
     window.addEventListener('error', (event) => {
       console.error('Global error:', {
         message: event.message,
@@ -407,12 +406,12 @@
       </div>
       <!-- Category Form -->
       <div id="add-category-form" class="hidden space-y-4">
-        <input id="modal-category-name" type="text" placeholder="Category Name" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
-        <select id="modal-category-type" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <input id="modal-category-name" type="text" placeholder="Category Name" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <select id="modal-category-type" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
           <option value="income">Income</option>
           <option value="expense">Expense</option>
         </select>
-        <select id="modal-category-budget" class="p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <select id="modal-category-budget" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-600">
           <option value="none">None</option>
           <option value="add-new">Add New</option>
         </select>
